--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,10 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr;
+  grid-gap: 1px;
+  max-width: 700px;
   width: 100%;
   height: 100%;
 }
