--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,21 +1,27 @@
 .Button {
-  background: #333;
-  width: 110px;
-  height: 110px;
-  font-size: 40px;
-  color: #fff;
+  background: #e0e0e0;
+  width: 100%;
+  height: 100px;
+  font-size: 35px;
+  color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 3%;
   cursor: pointer;
-  -webkit-border-radius: 3%;
-  -moz-border-radius: 3%;
-  -ms-border-radius: 3%;
-  -o-border-radius: 3%;
+  border: 1px solid slategray;
+  border-radius: 1%;
+  -webkit-border-radius: 1%;
+  -moz-border-radius: 1%;
+  -ms-border-radius: 1%;
+  -o-border-radius: 1%;
 }
 
 .Button.zero {
   width: 100%;
   grid-column: 1 / span 2;
+  margin-right: 1px;
+}
+
+.Button.orangered {
+  background-color: #f5913e;
 }
