--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -1,17 +1,17 @@
 .Display {
-  margin-top: 25px;
-  margin-bottom: 15px;
   padding-right: 20px;
   text-align: right;
   line-height: 90px;
-  width: 455px;
+  width: 100%;
   height: 100px;
-  background-color: #000;
+  background-color: #858694;
   color: #fff;
+  font-weight: bold;
   font-size: 50px;
-  border-radius: 2%;
-  -webkit-border-radius: 2%;
-  -moz-border-radius: 2%;
-  -ms-border-radius: 2%;
-  -o-border-radius: 2%;
+  border: 1px solid slategray;
+  border-radius: 0.5%;
+  -webkit-border-radius: 0.5%;
+  -moz-border-radius: 0.5%;
+  -ms-border-radius: 0.5%;
+  -o-border-radius: 0.5%;
 }
