--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,5 +1,5 @@
 .Button {
-  background: #e0e0e0;
+  background: #f5913e;
   width: 100%;
   height: 100px;
   font-size: 35px;
@@ -22,6 +22,6 @@
   margin-right: 1px;
 }
 
-.Button.orangered {
-  background-color: #f5913e;
+.Button.gray {
+  background: #e0e0e0;
 }
