--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,13 +1,13 @@
 .Button {
-  background: #f5913e;
-  width: 100%;
-  height: 100px;
-  font-size: 35px;
-  color: #000;
   display: flex;
+  flex-basis: 25%;
+  height: 100px;
   align-items: center;
   justify-content: center;
+  font-size: 35px;
+  color: #000;
   cursor: pointer;
+  background: #f5913e;
   border: 1px solid slategray;
   border-radius: 1%;
   -webkit-border-radius: 1%;
@@ -17,9 +17,10 @@
 }
 
 .Button.zero {
-  width: 100%;
-  grid-column: 1 / span 2;
-  margin-right: 1px;
+  /* width: 100%;
+  grid-column: 1 / span 2;*/
+  flex-basis: 50%;
+  /* margin-right: 1px;*/
 }
 
 .Button.gray {
