--- a/src/components/ButtonPannel/ButtonPanel.css
+++ b/src/components/ButtonPannel/ButtonPanel.css
@@ -1,14 +1,15 @@
 .ButtonPanel {
   width: 100%;
-  display: grid;
-  grid-template-columns: 100%;
+  display: flex;
+  flex-direction: column;
+  /* grid-template-columns: 100%;
   grid-template-rows: repeat(5, 1fr);
-  grid-gap: 1px;
+  grid-gap: 1px; */
 }
 
 .Group {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  /* grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 100%;
-  grid-gap: 1px;
+  grid-gap: 1px; */
 }
