--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -4,6 +4,7 @@
   height: 100px;
   align-items: center;
   justify-content: center;
+  position: relative;
   font-size: 35px;
   color: #000;
   cursor: pointer;
@@ -16,11 +17,22 @@
   -o-border-radius: 1%;
 }
 
+.Button::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.Button:hover::after {
+  cursor: pointer;
+  opacity: 1;
+}
+
 .Button.zero {
-  /* width: 100%;
-  grid-column: 1 / span 2;*/
   flex-basis: 50%;
-  /* margin-right: 1px;*/
 }
 
 .Button.gray {
